# twice

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh
cmake/: clang.cmake  gcc.cmake  gnu-flags.cmake
include/libtwice/: config.h  exception.h  filemap.h  machine.h  nds_defs.h  types.h
include/libtwice/file/: file.h  file_view.h
include/libtwice/nds/: cartridge.h  defs.h  display.h  game_db.h  machine.h
include/libtwice/util/: filemap.h  frame_timer.h  matrix.h  ring_buffer.h  stopwatch.h  threaded_queue.h  triple_buffer.h
src/: CMakeLists.txt
src/common/: date.cc  date.h  logger.cc  logger.h  macros.h  profiler.cc  profiler.h  ringbuf.h  types.h  util.h
src/common/bit/: byteswap.h
src/file/: posix_file.cc  posix_file_view.cc
src/libtwice/: CMakeLists.txt  bus.cc  bus.h  config.cc  display.cc  filemap.cc  filemap_common.cc  filemap_default.cc  filemap_fstream.cc  game_db.cc  io.cc  io.h  machine.cc  nds.cc  nds.h  ppu_vram.h  types.h  util.h
src/libtwice/arm/: arm.cc  arm.h  arm7.cc  arm7.h  arm9.cc  arm9.h
src/libtwice/file/: common_file.cc  posix_file.cc  posix_file_view.cc  posix_internal.h  windows_file.cc  windows_file_view.cc  windows_internal.h
src/libtwice/mem/: bus.h  io.cc  io.h  vram.h
src/libtwice/nds/: display.cc  machine.cc
src/nds/: CMakeLists.txt  cartridge.cc  cartridge.h  dma.cc  dma.h  firmware.cc  firmware.h  game_db.cc  ipc.cc  ipc.h  math.cc  math.h  nds.cc  nds.h  powerman.cc  powerman.h  rtc.cc  rtc.h  scheduler.cc  scheduler.h  sound.cc  sound.h  spi.cc  spi.h  timer.cc  timer.h  touchscreen.cc  touchscreen.h  wifi.cc  wifi.h
src/nds/arm/: arm.cc  arm.h  arm7.cc  arm7.h  arm9.cc  arm9.h  arm_inlines.h
src/nds/arm/interpreter/: arm_inst.h  lut.cc  lut.h  lut_gen_tables.h  lut_generator.cc  thumb_inst.h  util.h
src/nds/arm/interpreter/arm/: alu.h  branch.h  clz.h  cop.h  dsp_math.h  exception.h  load_store.h  load_store_misc.h  load_store_multiple.h  multiply.h  semaphore.h  status_reg.h
src/nds/arm/interpreter/thumb/: alu.h  branch.h  exception.h  load_store.h  load_store_multiple.h
src/nds/cart/: backup.cc  backup.h  cart.cc  cart.h  dldi.cc  dldi.h  key.cc  key.h  write_queue.cc  write_queue.h
src/nds/gpu/: color.h  gpu.cc  gpu.h  gpu3d.cc  gpu3d.h  vram.cc  vram.h
src/nds/gpu/2d/: bg.cc  gpu2d.cc  gpu2d.h  obj.cc  render.cc  render.h  render_bg.cc  render_gfx.cc  render_obj.cc
src/nds/gpu/3d/: ge.cc  ge.h  ge_matrix.cc  ge_matrix.h  ge_poly.cc  ge_poly.h  gpu3d.cc  gpu3d.h  gpu3d_types.h  interpolator.h  matrix.cc  matrix.h  polygon.h  re.cc  re.h  re_poly.cc  re_poly.h
src/nds/mem/: bus.cc  bus.h  io.cc  io.h  io7.cc  io7.h  io9.cc  io9.h  vram.h
test/arm9/: arm7.asm  arm9.asm
test/roms/: common_main.asm  common_setup.asm
test/roms/arm9/: arm9.asm  build.sh
test/roms/misc/: arm9.asm  build.sh
test/test-roms/hello-world/: Makefile
test/test-roms/hello-world/arm7/: Makefile  arm7.c  arm7.ld  entry.asm
test/test-roms/hello-world/arm9/: Makefile  arm9.c  arm9.ld  entry.asm  main.c  util.h
test/test-roms/twice-suite/: Makefile
test/test-roms/twice-suite/arm7/: Makefile  arm7.ld
test/test-roms/twice-suite/arm9/: Makefile  font8x8_basic.h  main.c  util.h  writeback.s
tools/: CMakeLists.txt
tools/dldi-driver/: Makefile  dldi_driver.ld  driver.c  header.s
tools/twice-qt/: CMakeLists.txt  actions.cc  actions.h  audio_buffer_device.h  audio_io.cc  audio_io.h  buffers.h  config_manager.cc  config_manager.h  display.cc  display.h  display_widget.cc  display_widget.h  emulator_events.h  emulator_thread.cc  emulator_thread.h  emulatorthread.cc  emulatorthread.h  events.h  frame_timer.h  input_control.cc  input_control.h  input_manager.cc  input_manager.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow_actions.cc  mainwindow_actions.h  settings_dialog.cc  settings_dialog.h
tools/twice-qt/settings/: input_settings.cc  input_settings.h
tools/twice-qt/shaders/: lcd1x_nds.h  nds_color.h  none.h  shaders.h
tools/twice-qt/util/: frame_timer.h  matrix.h  stopwatch.h  threaded_queue.h  triple_buffer.h
tools/twice-qt6/: CMakeLists.txt  actions.cc  actions.h  audio_out.cc  audio_out.h  buffers.h  display_widget.cc  display_widget.h  emulator_thread.cc  emulator_thread.h  events.h  main.cc  mainwindow.cc  mainwindow.h  settings_dialog.cc  settings_dialog.h
tools/twice-sdl/: CMakeLists.txt  args.cc  args.h  database.cc  database.h  main.cc  moving_average.h  platform.cc  platform.h  screenshot.cc  screenshot.h
